add button colors

--- a/app/src/main/res/layout/activity_interface.xml
+++ b/app/src/main/res/layout/activity_interface.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Administrator Login"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/SignUp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/SignUp"
@@ -23,6 +25,8 @@
         android:layout_height="56dp"
         android:layout_marginTop="40dp"
         android:text="Sign Up"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
