--- a/app/src/main/res/layout/add_bill.xml
+++ b/app/src/main/res/layout/add_bill.xml
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Price"
+        android:hint="Price including taxes"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
