--- a/app/src/main/res/layout/activity_admin_interface.xml
+++ b/app/src/main/res/layout/activity_admin_interface.xml
@@ -13,6 +13,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="68dp"
         android:text="Abrechnung"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +26,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="28dp"
         android:text="ADD Work"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/Abrechnung"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/Abrechnung"
@@ -35,6 +39,8 @@
         android:layout_height="60dp"
         android:layout_marginTop="112dp"
         android:text="logout"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/Abrechnung"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/Abrechnung"
