--- a/app/src/main/res/layout/activity_administrator_login.xml
+++ b/app/src/main/res/layout/activity_administrator_login.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btnAdminLogin"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintTop_toBottomOf="@+id/btnAdminLogin" />
@@ -21,6 +23,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:text="Log In"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/edtAdminPassword"
         app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="@+id/edtAdminPassword"
@@ -60,6 +64,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:text="Interface Login"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btnAdminSignUp"
         app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="@+id/btnAdminSignUp"
