--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,6 +57,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Sign Up"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/edtEnterPassword"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/edtEnterPassword"
@@ -67,6 +69,8 @@
         android:layout_width="96dp"
         android:layout_height="0dp"
         android:text="Login"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnSignUp"
