--- a/app/src/main/res/layout/start.xml
+++ b/app/src/main/res/layout/start.xml
@@ -46,6 +46,8 @@
 <!--            layout="@layout/" />-->
 
     </LinearLayout>
+    <include
+        layout="@layout/" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
