add  change btn colors

--- a/app/src/main/res/layout/activity_show_add_bill.xml
+++ b/app/src/main/res/layout/activity_show_add_bill.xml
@@ -113,8 +113,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Open Camera"
-        android:backgroundTint="@color/white"
-        android:textColorHint="#@color/buttonhint"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/btn_setWork"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,8 +127,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
         android:text="Upload"
-        android:backgroundTint="@color/white"
-        android:textColorHint="#@color/buttonhint"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
