--- a/app/src/main/res/layout/activity_show_add_bill.xml
+++ b/app/src/main/res/layout/activity_show_add_bill.xml
@@ -112,11 +112,11 @@
         android:id="@+id/btn_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
         android:text="Open Camera"
-        android:backgroundTint="@color/black"
-        android:textColorHint="@color/white"
-        app:layout_constraintBottom_toTopOf="@id/btn_setWork"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_setWork"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent" />
@@ -126,9 +126,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="44dp"
-        android:text="Upload"
-        android:backgroundTint="@color/black"
-        android:textColorHint="@color/white"
+        android:backgroundTint="@color/white"
+        android:text="Add Bill"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
