--- a/app/src/main/res/layout/activity_rob_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_rob_nav_drawer.xml
@@ -37,6 +37,7 @@
 
         <TextView
             android:layout_width="0dp"
+            android:textColor="@color/black"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
@@ -67,6 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/addnewbill"
+            android:textColor="@color/black"
             android:padding="15dp"/>
 
         <ImageView
@@ -94,6 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
+            android:textColor="@color/black"
             android:text="@string/calculate" />
 
         <ImageView
@@ -121,6 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/logout"
+            android:textColor="@color/black"
             android:padding="15dp"/>
 
         <ImageView
