--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -60,13 +60,19 @@
         app:layout_constraintEnd_toEndOf="@+id/edtEnterPassword"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/edtEnterPassword"
+        android:theme="@style/Button.White"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/edtEnterPassword" />
+
 
     <Button
         android:id="@+id/btnLogIn"
         android:layout_width="96dp"
         android:layout_height="0dp"
         android:text="Login"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnSignUp"
