--- a/app/src/main/res/layout/activity_interface.xml
+++ b/app/src/main/res/layout/activity_interface.xml
@@ -13,6 +13,8 @@
         android:layout_marginTop="40dp"
         android:text="Administrator Login"
         app:layout_constraintEnd_toEndOf="@+id/SignUp"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/SignUp"
         app:layout_constraintTop_toBottomOf="@+id/SignUp" />
@@ -24,6 +26,8 @@
         android:layout_marginTop="40dp"
         android:text="Sign Up"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
