add changes taxrate, business

--- a/app/src/main/res/layout/activity_show_add_bill.xml
+++ b/app/src/main/res/layout/activity_show_add_bill.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Tax Deprecation"
+        android:text="Tax rate"
         app:layout_constraintBottom_toTopOf="@+id/spinner2"
         app:layout_constraintEnd_toEndOf="@+id/spinner2"
         app:layout_constraintHorizontal_bias="0.496"
@@ -44,7 +44,7 @@
         android:id="@+id/Business"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Buisiness"
+        android:text="Business"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.798"
