--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="rootLayoutTapped"
+    android:background="@color/black"
     tools:context=".SignUP.SignUp">
 
     <EditText
@@ -57,12 +58,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Sign Up"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/edtEnterPassword"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/edtEnterPassword"
         android:theme="@style/Button.White"
-        android:backgroundTint="@color/white"
-        android:textColorHint="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/edtEnterPassword" />
 
 
@@ -81,11 +82,11 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="281dp"
-        android:layout_height="348dp"
+        android:layout_height="240dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sign_up_all" />
+        app:srcCompat="@drawable/billing" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
