--- a/app/src/main/res/layout/activity_show_add_bill.xml
+++ b/app/src/main/res/layout/activity_show_add_bill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.show_add_bill">
+    tools:context=".Display_Interface.show_add_bill">
 
 
     <TextView
