--- a/app/src/main/res/layout/activity_showdata.xml
+++ b/app/src/main/res/layout/activity_showdata.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.activity_showdata">
+    tools:context=".Display_Interface.activity_showdata">
 
     <LinearLayout
         android:layout_width="match_parent"
