--- a/app/src/main/res/layout/activity_get_pictures.xml
+++ b/app/src/main/res/layout/activity_get_pictures.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.GetPictures">
+    tools:context=".After_Login.GetPictures">
 
     <ScrollView
         android:layout_width="match_parent"
