--- a/app/src/main/res/layout/start.xml
+++ b/app/src/main/res/layout/start.xml
@@ -13,9 +13,9 @@
         android:layout_height="202dp"
         android:orientation="vertical">
 
-        <include layout="@layout/activity_rob_toolbar" />
+        <include layout="@layout/toolbar2" />
 
-        <include layout="@layout/activity_showdata" />
+        <include layout="@layout/showdata" />
 
     </LinearLayout>
 
@@ -25,7 +25,7 @@
         android:layout_gravity="start"
         android:background="@android:color/white">
 
-        <include layout="@layout/activity_rob_nav_drawer" />
+        <include layout="@layout/nav_drawer" />
 
         <TextView
             android:layout_width="match_parent"
