--- a/app/src/main/res/layout/addbill.xml
+++ b/app/src/main/res/layout/addbill.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <include layout="@layout/activity_show_add_bill" />
+        <include layout="@layout/show_add_bill" />
 
     </LinearLayout>
 
