--- a/app/src/main/res/layout/addbill.xml
+++ b/app/src/main/res/layout/addbill.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/activity_rob_toolbar"
+            layout="@layout/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -30,7 +30,7 @@
         android:background="@android:color/white">
 
         <include
-            layout="@layout/activity_rob_nav_drawer"
+            layout="@layout/nav_drawer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
