--- a/app/src/main/res/layout/activity_administrator_login.xml
+++ b/app/src/main/res/layout/activity_administrator_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".SignUP.Login">
 
     <Button
@@ -74,14 +75,14 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="0dp"
-        android:layout_height="258dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="281dp"
+        android:layout_height="240dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088"
-        app:srcCompat="@drawable/admin_login" />
+        app:srcCompat="@drawable/billing" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
