--- a/app/src/main/res/layout/nav_drawer.xml
+++ b/app/src/main/res/layout/nav_drawer.xml
@@ -88,7 +88,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="clickLogout"
+        android:onClick="deleteUser"
         android:background="@color/white">
 
         <TextView
