--- a/app/src/main/res/layout/show_add_bill.xml
+++ b/app/src/main/res/layout/show_add_bill.xml
@@ -78,47 +78,47 @@
         android:id="@+id/steuersatz"
         android:layout_width="239dp"
         android:layout_height="30dp"
-        android:text="Steuersatz: "
+        android:layout_marginTop="140dp"
         android:gravity="center"
+        android:text="Steuersatz: "
         android:textSize="7pt"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/Private"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_deadline" />
 
     <CheckBox
         android:id="@+id/check20"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="24dp"
         android:text="20%"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/Business"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/steuersatz" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.624" />
 
     <CheckBox
         android:id="@+id/check10"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:text="10%"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/Business"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintBottom_toBottomOf="@+id/check20"
         app:layout_constraintStart_toEndOf="@+id/check20"
-        app:layout_constraintTop_toBottomOf="@+id/steuersatz"/>
+        app:layout_constraintTop_toTopOf="@+id/check20" />
 
     <CheckBox
         android:id="@+id/check13"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="13%"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/Business"
-        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintBottom_toBottomOf="@+id/check10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toEndOf="@+id/check10"
-        app:layout_constraintTop_toBottomOf="@+id/steuersatz"/>
+        app:layout_constraintTop_toTopOf="@+id/check10"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_camera"
