--- a/app/src/main/res/layout/showdata.xml
+++ b/app/src/main/res/layout/showdata.xml
@@ -56,7 +56,8 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="628dp"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="29dp">
 
 
             <LinearLayout
