add delete Bill

--- a/app/src/main/res/layout/activity_admin_delete_user.xml
+++ b/app/src/main/res/layout/activity_admin_delete_user.xml
@@ -30,30 +30,35 @@
     <HorizontalScrollView
         android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="80dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <Button
                 android:id="@+id/Private_Button"
-                android:layout_width="150dp"
+                android:layout_width="158dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="35dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="5dp"
                 android:background="#400000"
-                android:text="Private Bills"
+                android:text="Get Private Bills"
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/black"
                 android:textColor="#ffffff" />
 
             <Button
                 android:id="@+id/Business_Button"
-                android:layout_width="150dp"
+                android:layout_width="158dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="35dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="5dp"
                 android:background="#400000"
-                android:text="Buisness Bill"
+                android:text="Get Buisness Bills"
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/black"
                 android:textColor="#ffffff" />
 
         </LinearLayout>
@@ -63,7 +68,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginLeft="20dp">
+        android:layout_marginLeft="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,7 +84,7 @@
     </ScrollView>
 
     <HorizontalScrollView
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="120dp">
 
@@ -92,9 +97,9 @@
                 android:id="@+id/txt_Write_Work"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="35dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:hint="Private"
+                android:hint="Type in private bill to delete"
                 android:text=""
                 android:textColorHint="#757575" />
 
@@ -104,7 +109,7 @@
                 android:layout_height="100dp"
                 android:layout_marginLeft="35dp"
                 android:layout_marginTop="20dp"
-                android:hint="Business"
+                android:hint="Type in business bill to delete"
                 android:text=""
                 android:textColorHint="#757575" />
         </LinearLayout>
@@ -116,7 +121,7 @@
 
 
     <HorizontalScrollView
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
@@ -127,22 +132,26 @@
 
             <Button
                 android:id="@+id/Delete_Private"
-                android:layout_width="match_parent"
+                android:layout_width="158dp"
                 android:layout_height="70dp"
                 android:layout_marginLeft="17dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
                 android:background="#400000"
-                android:text="Delete Private"
+                android:text="Delete Private Bill"
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/black"
                 android:textColor="#ffffff" />
 
             <Button
                 android:id="@+id/Delete_Business"
-                android:layout_width="match_parent"
+                android:layout_width="158dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="47dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginTop="5dp"
                 android:background="#400000"
-                android:text="Delete Business"
+                android:text="Delete Business Bill"
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/black"
                 android:textColor="#ffffff" />
 
         </LinearLayout>
