--- a/app/src/main/res/layout/activity_show_delete_bill.xml
+++ b/app/src/main/res/layout/activity_show_delete_bill.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".After_Login.show_delete_bill">
+    tools:context=".After_Login.show_delete_bill"
+    android:id="@+id/drawer_layout">
 
   <LinearLayout
       android:layout_width="match_parent"
