changes name etc added stuff

--- a/app/src/main/res/layout/activity_show_delete_bill.xml
+++ b/app/src/main/res/layout/activity_show_delete_bill.xml
@@ -15,7 +15,7 @@
 
 
     <include layout="@layout/toolbar2" />
-    <include layout="@layout/activity_admin_delete_user" />
+    <include layout="@layout/delete_user" />
 
   </LinearLayout>
 
