--- a/app/src/main/res/layout/activity_show_delete_bill.xml
+++ b/app/src/main/res/layout/activity_show_delete_bill.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".After_Login.show_delete_bill"
+    android:background="@color/background"
     android:id="@+id/drawer_layout">
 
   <LinearLayout
