--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:padding="10dp"
     android:gravity="center_vertical"
-    android:background="@color/black">
+    android:background="@color/background">
 
 
     <ImageView
