--- a/app/src/main/res/layout/show_add_bill.xml
+++ b/app/src/main/res/layout/show_add_bill.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -67,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:ems="15"
-        android:hint="Deadline"
+        android:hint="Date when taken"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/txt_Titel"
@@ -91,13 +92,12 @@
         android:id="@+id/check20"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="52dp"
         android:text="20%"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.624" />
+        app:layout_constraintTop_toBottomOf="@+id/steuersatz"
+        app:layout_constraintVertical_bias="0.072" />
 
     <CheckBox
         android:id="@+id/check10"
