--- a/app/src/main/res/layout/activity_change_data1_user.xml
+++ b/app/src/main/res/layout/activity_change_data1_user.xml
@@ -11,8 +11,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="308dp"
-        android:layout_marginLeft="100dp">
+        android:layout_height="208dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,23 +28,23 @@
 
 
     <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="94dp"
-        android:layout_marginLeft="150dp">
+        android:layout_width="179dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="135dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <Button
                 android:id="@+id/btn_GET_ALL_INFO"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="147dp"
-                android:layout_marginTop="20dp"
-                android:background="#400000"
-                android:text="Get all 'Users'"
-                android:textColor="#ffffff" />
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:text="Private Bills" />
 
 
         </LinearLayout>
@@ -53,9 +52,9 @@
 
 
     <HorizontalScrollView
-        android:layout_width="match_parent"
+        android:layout_width="170dp"
         android:layout_height="116dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="130dp"
         android:layout_marginTop="10dp">
 
         <LinearLayout
@@ -67,9 +66,7 @@
                 android:id="@+id/txt_Admin_Choose_User"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="280dp"
-
-                android:hint="Choose User: USERNAME"
+                android:hint="Choose name of bill: "
                 android:text=""
                 android:textColorHint="#757575" />
 
@@ -81,7 +78,6 @@
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="124dp"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp">
 
         <LinearLayout
@@ -93,8 +89,8 @@
                 android:id="@+id/txt_Admin_Choose_Username"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="35dp"
-                android:hint="USERNAME"
+                android:layout_marginLeft="10dp"
+                android:hint="Title of bill: "
                 android:text=""
                 android:textColorHint="#757575" />
 
@@ -102,8 +98,8 @@
                 android:id="@+id/txt_Admin_Choose_ID"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="35dp"
-                android:hint="ID (This can cause redundant data!!!)"
+                android:layout_marginLeft="25dp"
+                android:hint="Price"
                 android:text=""
                 android:textColorHint="#757575" />
 
@@ -112,47 +108,20 @@
                 android:id="@+id/txt_Admin_Choose_Password"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="35dp"
-                android:hint="Password"
+                android:layout_marginLeft="25dp"
+                android:hint="deprication rate"
                 android:text=""
                 android:textColorHint="#757575" />
 
-            <EditText
-                android:id="@+id/txt_Admin_Choose_Email"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="35dp"
 
-                android:hint="Email (This can cause redundant data!!!)"
-                android:text=""
-                android:textColorHint="#757575" />
-
-            <EditText
-                android:id="@+id/txt_Admin_Choose_Slots"
-                android:layout_width="150dp"
-                android:layout_height="100dp"
-                android:layout_marginLeft="35dp"
-
-                android:hint="Slots (This can cause redundant data!!!)"
-                android:text=""
-                android:textColorHint="#757575" />
         </LinearLayout>
     </HorizontalScrollView>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="171dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="20dp"
-        android:text="Note: \nRedundant data can be caused in two ways. First is when a student is
-assigned to one of the Projects. And the latter being a assistant with assigned students.
-If one of these is true a deletion and remake of the Account is recomended. Please proceed with caution!"
-        android:textSize="24sp" />
+
 
     <HorizontalScrollView
         android:layout_marginLeft="150dp"
-        android:layout_width="match_parent"
+        android:layout_width="170dp"
         android:layout_height="100dp">
 
         <LinearLayout
@@ -161,13 +130,12 @@ If one of these is true a deletion and remake of the Account is recomended. Plea
 
             <Button
                 android:id="@+id/btn_Upload_Info_ALL"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="70dp"
-                android:layout_marginLeft="147dp"
-                android:layout_marginTop="20dp"
-                android:background="#400000"
-                android:text="Upload all data"
-                android:textColor="#ffffff" />
+                android:backgroundTint="@color/white"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                android:text="Private Bills" />
 
         </LinearLayout>
     </HorizontalScrollView>
