--- a/app/src/main/res/layout/main_interface.xml
+++ b/app/src/main/res/layout/main_interface.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
-        android:text="Administrator Login"
+        android:text="Login"
         android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/SignUp"
         app:layout_constraintHorizontal_bias="0.0"
