--- a/app/src/main/res/layout/activity_get_pictures.xml
+++ b/app/src/main/res/layout/activity_get_pictures.xml
@@ -20,13 +20,12 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/linearLayout"
+                android:id="@+id/SetLayoutForPictures"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical" />
 
 
-            </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
