--- a/app/src/main/res/layout/change_bills.xml
+++ b/app/src/main/res/layout/change_bills.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".open.Change_DATA_1_User">
+    tools:context=".open.Change_Bill">
 
 
     <ScrollView
