--- a/app/src/main/res/layout/nav_drawer.xml
+++ b/app/src/main/res/layout/nav_drawer.xml
@@ -127,8 +127,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:textColor="@color/black"
-            android:text="@string/calculate" />
+            android:text="@string/change_data"
+            android:textColor="@color/black" />
 
         <ImageView
             android:layout_width="wrap_content"
