--- a/app/src/main/res/layout/nav_drawer.xml
+++ b/app/src/main/res/layout/nav_drawer.xml
@@ -119,7 +119,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="clickLogout"
+        android:onClick="change_data"
         android:background="@color/white">
 
         <TextView
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:text="@string/change_data"
+            android:text="@string/calculate"
             android:textColor="@color/black" />
 
         <ImageView
