--- a/app/src/main/res/layout/change_bills.xml
+++ b/app/src/main/res/layout/change_bills.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/drawer_layout"
     tools:context=".After_Login.Change_Bill">
 
 
